<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SpalshActivity">

    <ImageView
        android:id="@+id/Splash_icon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/font01"
        android:letterSpacing="0.1"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:letterSpacing="0.2"
        android:text="@string/yoursdetect"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>