<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect03"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login_teachers"
            android:textAlignment="center"
            android:textColor="#08AFF1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/teacherMailTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backBtn"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teacherrMailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittexts01"
                android:hint="@string/teacher_email"
                android:inputType="textCapSentences|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/teacherPasslTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacherMailTil"
            android:layout_marginTop="8dp"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teacherPasslEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittexts01"
                android:hint="@string/password"
                android:inputType="textCapSentences|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacherPasslTil"
            android:padding="8dp">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button01"
                android:text="Cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/loginTBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button01"
                android:text="@string/login"
                android:textColor="@color/white" />
        </LinearLayout>


    </RelativeLayout>
</layout>