<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TeacherActivity">

        <RelativeLayout
            android:id="@+id/toolbarRL"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/shape_toolbar02">

            <TextView
                android:id="@+id/titleTv"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/teaches_dashbord"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back__white24" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_below="@+id/toolbarRL">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/addSubjetTv"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/techer_nav_bg"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="Add Subjects"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/studentViewTv"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="View Student"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/item_nav_bar"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/AddSujetLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/toolbarRL"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:contentPadding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/SubjectTitelTil"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:hintEnabled="false">

                            <EditText
                                android:id="@+id/SubjectTitelEt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/shape_edittexts01"
                                android:drawableStart="@drawable/ic_baseline_person_24"
                                android:drawableLeft="@drawable/ic_baseline_person_24"
                                android:drawablePadding="10dp"
                                android:hint="@string/subject_title"
                                android:inputType="textPersonName|textCapWords"
                                android:padding="10dp"
                                android:textColor="@color/black"
                                android:textColorHint="@android:color/darker_gray" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/SubjectDiscriptionTil"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_margin="5dp"
                            app:hintEnabled="false">

                            <EditText
                                android:id="@+id/SubjectDiscriptionEt"
                                android:layout_width="match_parent"
                                android:layout_height="250dp"
                                android:background="@drawable/shape_edittexts01"
                                android:drawableStart="@drawable/ic_baseline_email_24"
                                android:drawableLeft="@drawable/ic_baseline_email_24"
                                android:drawablePadding="10dp"
                                android:hint="@string/subject_detail"
                                android:inputType="textEmailAddress"
                                android:padding="10dp"
                                android:textColor="@color/black"
                                android:textColorHint="@android:color/darker_gray" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <Button
                                android:id="@+id/submitBtn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/shape_button01"
                                android:letterSpacing="0.2"
                                android:text="@string/submit"
                                android:textColor="@color/white"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ViewStudentLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <ListView
                    android:id="@+id/StList_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>